--- a/css/style.css
+++ b/css/style.css
@@ -7,32 +7,31 @@ style.css
 
 
 
-body {
-	font-family: "Helvetica", sans-serif; font-size: 8pt;
-}
-
-
-h2, h3 { color: #8AD37F; font-size: 10pt; font-weight: bold; text-transform: uppercase;}
+body { font-family: 'Roboto Condensed', sans-serif; font-size: 10pt; }
+h2, h3 { color: #8AD37F; font-size: 12pt; font-weight: bold; text-transform: uppercase;}
 h3 { color: #fff;}
-
+a { font-size: 14pt;}
 
 /* ***** HEADER ***** */
 
-
-#mainlogo {
- max-height: 80px;
-max-width: 200px; 
-}
-
+header { background-color: #7ED305; }
+#mainlogo { max-height: 80px; max-width: 200px; margin: 5% 0 3% 5%;}
 #headercust { background-color: #7ED305; position: relative; top: 0; left: 0; width: 100%; }
 header a { color: #fff; }
-header li:hover { background-color: #7ED305; }
+header li a:hover { background-color: none; }
+#navbar { float: right; }
+#divider { color: #fff; margin-top: 3%; font-size: 16pt;}
+#search { height: 60px; float: right; clear: both; margin: -3% 2% 0 0; }
+#search #searchbox { width: 200px; height: 32px; }
 
 /* vegweek */
 
-#vegweek { background: rgba(17,244,216, .2); width: 200px; padding: 0; float: left; margin: 3% 0 0 -8%;}
-#vegweek img, #vegweek p, #vegweek h2 { padding: 0 0 0 10px; }
-#vegweek img { max-width: 190px; max-height: 190px; border: 1px solid black;}
-#vegweek h3 { background-color: #11F4D8; display: block; width: 100%; text-align: center; margin-top: 0; padding: 3px 0;}
+#vegweek { background: rgba(17,244,216, .2); width: 200px; height: 400px; padding: 0; float: left; 
+	margin: 3% 0 0 0; float: left; clear: none; text-align: center; }
+#vegweek img, #vegweek p, #vegweek h2 { padding: 0 10px; }
+#vegweek img { max-width: 190px; max-height: 190px; padding-left: 10px; }
+#vegweek h2 { margin: 3% 0 1% 0; }
+#vegweek h3 { background-color: #11F4D8; display: block; width: 100%; margin-top: 0; padding: 3px 0; }
 
 /* pic carousel */
+#slider { float: left; clear: none; }
