--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,14 @@ style.css
  6/2/16
 */
 
+/************************************************************ MAIN PAGE ************************************************************/
 
-
-body { font-family: 'Roboto Condensed', sans-serif; font-size: 10pt; }
+body { font-family: 'Roboto Condensed', sans-serif; font-size: 12pt; }
 h2, h3 { color: #8AD37F; font-size: 12pt; font-weight: bold; text-transform: uppercase;}
 h3 { color: #fff;}
 a { font-size: 14pt;}
 
-/* ***** HEADER ***** */
-
+/* header */
 header { background-color: #7ED305; }
 #mainlogo { max-height: 80px; max-width: 200px; margin: 5% 0 3% 5%;}
 #headercust { background-color: #7ED305; position: relative; top: 0; left: 0; width: 100%; }
@@ -25,13 +24,18 @@ header li a:hover { background-color: none; }
 #search #searchbox { width: 200px; height: 32px; }
 
 /* vegweek */
-
-#vegweek { background: rgba(17,244,216, .2); width: 200px; height: 400px; padding: 0; float: left; 
-	margin: 3% 0 0 0; float: left; clear: none; text-align: center; }
+#vegweek { background: rgba(17,244,216, .2); width: 360px; height: 350px; padding: 0; float: left; 
+	margin: 3%; float: left; clear: none; text-align: center; }
 #vegweek img, #vegweek p, #vegweek h2 { padding: 0 10px; }
 #vegweek img { max-width: 190px; max-height: 190px; padding-left: 10px; }
 #vegweek h2 { margin: 3% 0 1% 0; }
 #vegweek h3 { background-color: #11F4D8; display: block; width: 100%; margin-top: 0; padding: 3px 0; }
 
 /* pic carousel */
-#slider { float: left; clear: none; }
+#slider { float: left; clear: right; }
+
+/* weekly video */
+#videoweek { float: left; clear: left; margin-left: 2%; }
+#videocontent { float: left; clear: none; }
+#videoweektext { background: rgba(239,239,27, .2); width: 65%; height: 315px; padding: 0; float: right; clear: none; text-align: center; }
+#videoweektext h3 { background-color: #EFEF1B; display: block; width: 100%; margin-top: 0; padding: 3px 0; }
