--- a/css/style.css
+++ b/css/style.css
@@ -8,50 +8,61 @@ style.css
 /************************************************************ MAIN PAGE ************************************************************/
 
 body { font-family: 'Roboto Condensed', sans-serif; font-size: 12pt; }
-h2, h3 { color: #8AD37F; font-size: 14pt; font-weight: bold; text-transform: uppercase;}
-h3 { color: #fff;}
+h2, h3, h4 { color: #8AD37F; font-size: 14pt; font-weight: bold; text-transform: uppercase;}
+h3, h5 { color: #fff;}
+h4 { color: #8AD37F; }
+h5 { font-size: 12pt; }
 a { font-size: 18pt;}
 
 /* header */
 header { background-color: #7ED305; }
-#mainlogo { max-height: 230px; max-width: 350px; margin: 10% 0 3% 5%;}
+header h5  { margin: -11.5% 0 10% 44%; }
+#mainlogo { max-height: 380px; max-width: 500px; margin: 5% 0 3% 3%;}
 #headercust { background-color: #7ED305; position: relative; top: 0; left: 0; width: 100%; }
 header a, #subnav a { color: #fff; }
 header li a:hover { background-color: none; }
 #navbar { float: right; }
 #divider { color: #fff; margin-top: 3%; font-size: 16pt;}
-#search { height: 60px; float: right; clear: both; margin: -4% 2% -1% 0; }
+#search { height: 60px; float: right; clear: both; margin: -14% 2% -1% 0; }
 #search #searchbox { width: 200px; height: 34px; border-radius: 5px; border: none; margin-top: 1%; }
 
 /*subnav*/
 #subnav { border-radius: 0; background-color: rgba(126,211,5, .2); border: none; }
-#subnav a { margin-top: 3%; color: rgb(126,211,5); }
+#subnav a { margin-top: 3%; color: #2696DB; }
 #subnav ul { width: 100%; }
 #subnav ul li { margin-right: 2%; }
 
 /* vegweek */
 #vegweek, #slider { background: rgba(17,244,216, .2); width: 22.500em; height: 21.875em; padding: 0; float: left; 
-	margin: 0 1.8% 3% 3%; float: left; clear: none; text-align: center; }
+	margin: -.5% 1.8% 2.5% 1.5%; float: left; clear: none; text-align: center; }
 #vegweek img, #vegweek p, #vegweek h2 { padding: 0 10px; }
 #vegweek img { max-width: 190px; max-height: 190px; padding-left: 10px; }
 #vegweek h2 { margin: 3% 0 1% 0; }
 #vegweek h3 { background-color: #11F4D8; display: block; width: 100%; margin-top: 0; padding: 3px 0; }
+#vegweek p { font-size: 9pt; }
 
 /* weekly video */
-#videoweek { float: left; clear: left; margin: -1.5% 0 0 1.78%; }
-#videocontent { float: left; clear: none; width: 22.500em; height: 14.988em; margin-right: .5%;  }
+#videoweek { float: left; clear: left; margin: -1.5% 0 0 .40%; }
+#videocontent { float: left; clear: none; width: 22.500em; height: 14.988em; margin-right: .2%;  }
 #videoweektext { background: rgba(239,239,27, .2); width: 60.5%; height: auto; padding: 0; float: left; 
 	clear: none; text-align: center; margin-left: 1%; }
 #videoweektext h3 { background-color: #EFEF1B; display: block; width: 100%; margin-top: 0; padding: 3px 0; }
 
 /* pic carousel */
-#slider { float: left; clear: right; margin-left: -.5%; width: 53.3%; }
+#slider { float: left; clear: right; margin-left: -.7%; width: 53.3%; }
 #caropic { width: 53.3%; height: 10%; }
 #slider li { list-style-type: none; }
 
 /*recipes*/
 #indexrecipe h3 { background-color: #21D306; display: block; width: 100%; margin: 0; padding: 3px 0; text-align: center; font-size: 14pt; }
 #indexrecipe { padding: 0; float: left; 
-	margin: 1% 3% 3%; clear: none; text-align: center; width: 95%; }
-#indexrec1 img { margin: 2%; }
-#indexrec1 { width: 20%; height: 50%; float: left; clear: none; background: rgba(33,211,6, .2); margin-top: 0; }
+	margin: 1% 3% 3% 1.5%; clear: none; text-align: center; width: 97%; }
+#indexrec1 img { margin: 6% 2% 0 2%; max-width: 95%; max-height: 20%; }
+#indexrec1 { width: 32%; height: auto; float: left; clear: none; background: rgba(33,211,6, .2); margin-top: 0; }
+#indexrec1 p { font-size: 9pt; text-align: left;}
+#indexreccta { float: right; clear: both; margin: 3% 0;}
+
+/*footer*/
+#footer { background-color: #11F4D8; text-align: center; float: left; clear: both; width: 100%; height: auto; }
+#footer ul { margin: 1% 0 1% 18%; }
+#footer h3 { margin-bottom: 2%; clear: both; }
