--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ header a, #subnav a { color: #fff; }
 header li a:hover { background-color: none; }
 #navbar { float: right; clear: right; }
 #divider { color: #fff; margin-top: 3%; font-size: 16pt;}
-#search { height: 60px; float: right; clear: both; margin: -14% 2% -1% 0; }
+#search { height: 60px; float: right; clear: both; margin: -13% 2% -1% 0; }
 #search #searchbox { width: 200px; height: 34px; border-radius: 5px; border: none; margin-top: 1%; }
 #socmedicon { width: 20px; height: 20px; }
 
@@ -34,7 +34,7 @@ header li a:hover { background-color: none; }
 #subnav ul li { margin-right: 2%; }
 
 /* vegweek */
-#vegweek, #slider { background: rgba(17,244,216, .2); width: 22.500em; height: 21.875em; padding: 0; float: left; 
+#vegweek, #slider { background: rgba(17,244,216, .2); width: 21.5%; height: 30em; padding: 0; float: left; 
 	margin: -.5% 1.8% 2.5% 1.5%; float: left; clear: none; text-align: center; }
 #vegweek img, #vegweek p, #vegweek h2 { padding: 0 10px; }
 #vegweek img { max-width: 190px; max-height: 190px; padding-left: 10px; }
@@ -44,14 +44,14 @@ header li a:hover { background-color: none; }
 
 /* weekly video */
 #videoweek { float: left; clear: left; margin: -1.5% 0 0 .40%; }
-#videocontent { float: left; clear: none; width: 22.500em; height: 14.988em; margin-right: .2%;  }
+#videocontent { float: left; clear: none; width: 31.5%; height: 14.988em; margin-right: .2%;  }
 #videoweektext { background: rgba(239,239,27, .2); width: 60.5%; height: auto; padding: 0; float: left; 
 	clear: none; text-align: center; margin-left: 1%; }
 #videoweektext h3 { background-color: #EFEF1B; display: block; width: 100%; margin-top: 0; padding: 3px 0; }
 
 /* pic carousel */
-#slider { float: left; clear: right; margin-left: -.7%; width: 53.3%; }
-#caropic { width: 53.3%; height: 10%; }
+#slider { float: left; clear: right; margin-left: -.7%; width: 56.7%; height: 30em;}
+#caropic { width: 100%; height: 100%; margin-left: -.8%;}
 #slider li { list-style-type: none; }
 
 /*recipes*/
