--- a/Views/sitemap.html
+++ b/Views/sitemap.html
@@ -1,6 +1,6 @@
 <!--VEG BUDDY 
 *************
-about.html
+sitemap.html
 *************
  6/12/16
 -->
@@ -88,33 +88,23 @@ $(document).ready(function(){
 	</nav>
 
 	<!--VEGAN OF THE WEEK -->
-		<div id="about" class="container">              
-			<h3>About us</h3>
-		<!--	<h2>What is Veg Buddy?</h2> -->
-			<p>Many people go on the Internet to search for some sort of community to be a part of that relates to their non-Internet lives. There are many niches and communities that form and continue to grow, much in part by meeting and forming a bond via the web. Veganism is has became an increasingly popular lifestyle and its web present is also becoming a growing trend.<br><br>
-
-There are so many websites that are  awesome and informative but I would want to take this information and these intelligent people and put them together in an interactive community; like a Facebook for Vegans, if you will.  I do realize that Facebook has very many groups for Vegans so Veg Buddy would serve as a hub of communication and information. <br><br>
-
-The growing market of vegans that go online for their research would take comfort in knowing they have a one stop shop to speak to other vegans, ask and answer questions and maybe make some like-minded friends. <br><br>
-
-With Veg Buddy, you can add friends and send them messages. Also, you can share recipes, setup meal plans and make grocery lists. Each user can create a profile and on their page, they can post recipes, shopping lists or ask questions that others can reply to. Also, we will feature user videos and recipies on the main page daily.<br><br>
-
-We believe this website would become a staple to the daily lives of its users. Also, if the goal of facilitating an inviting and positive environment, we will also encourage more users to join as the community grows larger.</p>
+		<div class="container" id="sitemap">              
+	       <img src="../images/sitemap.png">
 		</div>
 
-	<!-- FOOTER -->
-	<footer>
-		<div class="container" id="footer">
-			<ul class="nav navbar-nav" id="footernav">
-				<li><a href="about.html">ABOUT US</a></li>
-				<li><a href="privacy.html">PRIVACY POLICY</a></li>
-				<li><a href="sitemap.html">SITE MAP</a></li>
-				<li><a href="useragree.html">USER AGREEMENT</a></li>
-				<li><a href="contact.html">CONTACT US</a></li><br>
-			</ul><br><br>
-			<h3>COPYRIGHT 2016 WEB EARTH COOP. 403 EUCLID AVE. SYRACUSE, NY 13023 WEBEARTHCOOP.NET</h3>
-		</div>
-	</footer>
+  <!-- FOOTER -->
+  <footer>
+    <div class="container" id="footer">
+      <ul class="nav navbar-nav" id="footernav">
+        <li><a href="about.html">ABOUT US</a></li>
+        <li><a href="privacy.html">PRIVACY POLICY</a></li>
+        <li><a href="sitemap.html">SITE MAP</a></li>
+        <li><a href="useragree.html">USER AGREEMENT</a></li>
+        <li><a href="contact.html">CONTACT US</a></li><br>
+      </ul><br><br>
+      <h3>COPYRIGHT 2016 WEB EARTH COOP. 403 EUCLID AVE. SYRACUSE, NY 13023 WEBEARTHCOOP.NET</h3>
+    </div>
+  </footer>
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
