--- a/Views/privacy.html
+++ b/Views/privacy.html
@@ -205,7 +205,7 @@ $(document).ready(function(){
       United States<br>
       support@vegbuddy.net<br>
       315-555-1600<br>
-      <a href="contact.html">Conact Us Page</a><br><br>
+      <a href="contact.html">Contact Us Page</a><br><br>
 
 Last Edited on 2016-06-12</p>
 		</div>
