--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header li a:hover { background-color: none; }
 #divider { color: #fff; margin-top: 3%; font-size: 16pt;}
 #search { height: 60px; float: right; clear: both; margin: -12% 2% -1% 0; }
 #search #searchbox { width: 200px; height: 34px; border-radius: 5px; border: none; margin-top: 1%; }
-#socmedicon { width: 20px; height: 20px; }
+#socmedicon { width: 35px; height: 35px; }
 
 /*subnav*/
 #subnav { border-radius: 0; background-color: rgba(126,211,5, .2); border: none; }
@@ -57,7 +57,7 @@ header li a:hover { background-color: none; }
 #slider li { list-style-type: none; }
 
 /*recipes*/
-#indexrecipe h3, #about h3, #privacy h3 { background-color: #21D306; display: block; width: 100%; margin: 0; padding: 3px 0; 
+#indexrecipe h3, #about h3, #privacy h3, #login h3 { background-color: #21D306; display: block; width: 100%; margin: 0; padding: 3px 0; 
 	text-align: center; font-size: 14pt; }
 #indexrecipe, #about, #privacy { padding: 0; float: left; 
 	margin: 1% 3% 3% 1.5%; clear: none; text-align: center; width: 97%; }
@@ -86,3 +86,13 @@ header li a:hover { background-color: none; }
 #contact { margin-bottom: 5%; }
 #contact p { color: #000; text-align: center; font-size: 12pt; }
 #contactmap { margin: 2% 0 0 0; width: 100%; height: 30%; }
+
+/*login*/
+#login { margin: 2% 5% 5% 25%; }
+#login #loginform { background-color: #EFEF1B; float: left; clear: none; width: 35%; margin-right: 2%; padding: 4% 2% 4% 3%; }
+#loginform input { width: 95%; height: 50px; border: none; border-radius: 5px; margin-bottom: 8%; }
+#login h3 { text-align: left; width: 35%; }
+#login h4 { font-size: 26pt; }
+#regcta { margin-top: 3.2%; }
+
+
