--- a/Views/contact.html
+++ b/Views/contact.html
@@ -43,13 +43,18 @@ $(document).ready(function(){
           	</div>
 
        		<div id="navbar" class="collapse navbar-collapse">
-        		<ul class="nav navbar-nav">
-            		<li class="active"><!--<img src="user_pic.png"--><a href="#">Hello Username!</a></li>
-            		<li id="divider">&nbsp;|&nbsp;</li>
-            		<li><a href="#about">3 Messages</a></li>
-            		<li id="divider">&nbsp;|&nbsp;</li>
-            		<li><a href="#contact">Logout</a></li>
-        		</ul>
+            <ul class="nav navbar-nav">
+                <li class="active"><!--<img src="user_pic.png"--><a href="login.html">Login</a></li>
+                <li id="divider">&nbsp;|&nbsp;</li>
+                <li><a href="signup.html">Sign-Up</a></li>
+            </ul>
+          <!--  <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Hello Username!</a></li>
+                <li id="divider">&nbsp;|&nbsp;</li>
+                <li><a href="#about">3 Messages</a></li>
+                <li id="divider">&nbsp;|&nbsp;</li>
+                <li><a href="#contact">Logout</a></li>
+            </ul> -->
     		</div><!--/.nav-collapse -->
     	
     		<div id="search">
