dashboard and recipe pages
dashboard and recipe pages

--- a/Views/breakfast.html
+++ b/Views/breakfast.html
@@ -111,16 +111,17 @@ recipes.html
   
 
   <!-- RECIPES -->
-  <div id="recrecipe" class="container">
+   <a name="recipe"></a>
+  <div id="recrecipe" class="container" name="recipe">
   <h3>RECIPES</h3>
     <div id="siderec">           
-      <a href="breakfast.html">Breakfast</a><br>
-      <a href="lunch.html">Lunch</a><br>
-      <a href="dinner.html">Dinner</a><br>
-      <a href="dessert.html">Dessert</a><br>
-      <a href="appitizers.html">Appitzers</a><br>
-      <a href="snacks.html">Snacks</a><br>
-      <a href="drinks.html">Drinks</a>
+      <a href="breakfast.html#recipe"><b>Breakfast</b></a><br>
+      <a href="lunch.html#recipe">Lunch</a><br>
+      <a href="dinner.html#recipe">Dinner</a><br>
+      <a href="dessert.html#recipe">Dessert</a><br>
+      <a href="appitizers.html#recipe">Appitzers</a><br>
+      <a href="snacks.html#recipe">Snacks</a><br>
+      <a href="drinks.html#recipe">Drinks</a>
     </div>
 
     <div id="accordion" role="tablist" aria-multiselectable="true">
