--- a/Views/inbox.html
+++ b/Views/inbox.html
@@ -86,43 +86,28 @@ recipes.html
 
 	<!--VEGAN OF THE WEEK -->
   <div class="container" id="toprow">
-    <div id="vegweek" class="container">              
-      <h3>VEGAN OF THE WEEK</h3>
+    <div id="dashwelc" class="container">              
+      <h3>WELCOME USERNAME!</h3>
       <img src="images/veg_week.jpg">
-      <h2>ALLISON MCKENNA</h2>
-      <p>She has been a vegan for several years. Allison spends her free time working in animal shelters and dog rescues. Allison
-        has rescued over 50 pets in her home town from busy city streets, abusive homes, etc. She devotes her life to being
-        an advocate for animals and loves every second of it. She claims her love of animals ultimately lead her to starting
-        a vegan lifestyle. "It just made sense" Allison says.</p>
+      <a href="updatephoto.html">update photo</a>
+      <a href="messages.html">messages</a>
+      <a href="myrecipes.html">My Recipes</a>
+      <a href="settings.html">Settings</a>
     </div>
 
-  <!-- SLIDER -->
-    <div class="container" id="slider">
-  <!--    <ul class="bxslider" >
-        <li> --><img id="caropic" src="images/caro_01.jpg"> <!-- </li>
-          <li><img id="caropic" src="images/caro_02.jpg"></li>
-          <li><img id="caropic" src="images/caro_03.jpg"></li>
-          <li><img id="caropic" src="images/caro_04.jpg"></li>
-      
-      </ul> -->
-    </div>
-  </div>
 
   
 
   <!-- RECIPES -->
-  <div id="recrecipe" class="container">
-  <h3>RECIPES</h3>
-    <div id="siderec">           
-      <a href="breakfast.html">Breakfast</a><br>
-      <a href="lunch.html">Lunch</a><br>
-      <a href="dinner.html">Dinner</a><br>
-      <a href="dessert.html">Dessert</a><br>
-      <a href="appitizers.html">Appitzers</a><br>
-      <a href="snacks.html">Snacks</a><br>
-      <a href="drinks.html">Drinks</a>
+  <div id="dashboard" class="container">
+  <h3>Messages</h3>
+    <div id="dashboardlinks">           
+      <a href="inbox.html#dash"><b>Inbox (3)</b></a><br>
+      <a href="saved.html#dash">Saved</a><br>
+      <a href="deleted.html#dash">Deleted</a><br>
     </div>
 
+    <a name="dash">
     <div id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne">
@@ -161,7 +146,7 @@ recipes.html
     </div>
   </div>
 </div>
-    
+    </div>  
 
   </div>
 
