--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,12 @@ header li a:hover { background-color: none; }
 
 /* vegweek */
 #toprow { width: 100%; margin-left: 0; }
-#vegweek, #slider { background: rgba(17,244,216, .2); width: 27%; height: 30em; padding: 0; float: left; 
+#vegweek, #slider, #dashwelc { background: rgba(17,244,216, .2); width: 27%; height: 30em; padding: 0; float: left; 
 	margin: -.5% 1.8% .5em 0; float: left; clear: none; text-align: center; }
 #vegweek img, #vegweek p, #vegweek h2 { padding: 0 10px; }
 #vegweek img { max-width: 190px; max-height: 190px; padding-left: 10px; }
 #vegweek h2 { margin: 3% 0 1% 0; }
-#vegweek h3, #about h3 { background-color: #11F4D8; display: block; width: 100%; margin-top: 0; padding: 3px 0; }
+#vegweek h3, #about h3, #dashwelc h3 { background-color: #11F4D8; display: block; width: 100%; margin-top: 0; padding: 3px 0; }
 #vegweek p { font-size: 12pt; }
 
 /* weekly video */
@@ -58,7 +58,7 @@ header li a:hover { background-color: none; }
 #slider li { list-style-type: none; }
 
 /*recipes*/
-#indexrecipe h3, #about h3, #privacy h3, #login h3 { background-color: #21D306; display: block; width: 100%; margin: 0; padding: 3px 0; 
+#indexrecipe h3, #about h3, #privacy h3, #login h3, #recrecipe h3, #dashboard h3 { background-color: #21D306; display: block; width: 100%; margin: 0; padding: 3px 0; 
 	text-align: center; font-size: 14pt; }
 #indexrecipe, #about, #privacy { padding: 0; float: left; 
 	margin: 1% 3% 3% 1.5%; clear: none; text-align: center; width: 97%; }
@@ -96,4 +96,16 @@ header li a:hover { background-color: none; }
 #login h4 { font-size: 26pt; }
 #regcta { margin-top: 3.2%; }
 
+/* RECIPES */
+#accordion h3 { color: #000; }
+#recrecipe, #dashboard { float: left; height: 30em; margin-bottom: 5%; }
+#recrecipe #accordion { width: 80%; float: left; clear: none;}
+#siderec, #dashboardlinks { float: left; clear: none; width: 20%; background-color: #EFEF1B; height: 30em; }
+#recrecipe h3 { text-align: left; }
+#siderec a, #recrecipe h3, #dashboardlinks a, #dashboard h3 { padding-left: .8em; }
+#siderec a b, #dashboard a b {color: #8AD37F; font-size: 24pt;}
 
+/* dashboard */
+#dashwelc { float: left; clear: none; width: 20%; height: 30em; }
+#dashboard { width: 70%; float: left; clear: none; margin-top: -.3em;}
+#dashboard #accordion { width: 80%; float: left; clear: none; }
