--- a/Views/login.html
+++ b/Views/login.html
@@ -78,13 +78,13 @@ $(document).ready(function(){
   				<a href="recipes.html" class="dropdown-toggle" data-toggle="dropdown" role="button" 
   				aria-haspopup="true" aria-expanded="false">Recipes<span class="caret"></span></a>
           		<ul class="dropdown-menu">
-            		<li><a href="recipes.html">Breakfast</a></li>
-            		<li><a href="#">Lunch</a></li>
-            		<li><a href="#">Dinner</a></li>
-            		<li><a href="#">Dessert</a></li>
-            		<li><a href="#">Snacks</a></li>
-            		<li><a href="#">Appetizers</a></li>
-            		<li><a href="#">Drinks</a></li>
+                <li><a href="breakfast.html">Breakfast</a></li>
+                <li><a href="lunch.html">Lunch</a></li>
+                <li><a href="dinner.html">Dinner</a></li>
+                <li><a href="dessert.html">Dessert</a></li>
+                <li><a href="snacks.html">Snacks</a></li>
+                <li><a href="appetizers.html">Appetizers</a></li>
+                <li><a href="drinks.html">Drinks</a></li>
           		</ul>
   			</li>
   			<li><a href="#">Users</a></li>
