--- a/css/style.css
+++ b/css/style.css
@@ -82,15 +82,19 @@ header li a:hover { background-color: none; }
 /*privacy policy*/
 #privacy { text-align: left; }
 #privacy b { font-size: 13pt; }
+#privacy h4 { margin-left: 2em; }
 
 /*contact*/
 #contact { margin-bottom: 5%; }
 #contact p { color: #000; text-align: center; font-size: 12pt; }
 #contactmap { margin: 2% 0 0 0; width: 100%; height: 30%; }
 
+/*signup*/
+#signup { margin: 2em 0 3em 23em; }
+
 /*login*/
 #login { margin: 2% 5% 3% 25%; }
-#login #loginform { background-color: #EFEF1B; float: left; clear: none; width: 35%; margin-right: 2%; padding: 4% 2% 4% 3%; }
+#login #loginform { background-color: #EFEF1B; float: left; clear: none; width: 35%; margin-right: 2%; padding: 4% 2% 7% 3%; }
 #loginform input { width: 95%; height: 50px; border: none; border-radius: 5px; margin-bottom: 8%; }
 #login h3 { text-align: left; width: 35%; }
 #login h4 { font-size: 26pt; }
