--- a/Views/lunch.html
+++ b/Views/lunch.html
@@ -129,12 +129,30 @@ recipes.html
         <div class="panel-heading" role="tab" id="headingOne">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          THREE BEAN CHILI
+                <img src="../images/couschickfencit.jpeg" id="smallrecipepagepics">
+          Couscous With Chickpeas, Fennel, and Citrus
           </a>
       </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+<p>- 1 large fennel bulb with fronds<br>
+- 3 tablespoons olive oil, divided<br>
+- 1/2 teaspoon ground coriander<br>
+- 1 1/2 cups (or 1 15-ounce can) cooked and drained chickpeas<br> 
+- 10 Kalamata olives, halved and pitted<br>
+- Zest and juice of 1/2 lemon<br>
+- Zest and juice of 1 orange<br>
+- 1/2 teaspoon salt<br>
+- 1 cup instant couscous<br>
+
+Trim fennel and cut into 1/4-inch thick wedges. Reserve fronds for garnish.
+
+Heat 2 tablespoons olive oil in a large skillet over medium heat. Add fennel and cook, stirring occasionally, until tender and caramelized, about 10-15 minutes. Add coriander, chickpeas, olives, and lemon juice to pan and stir to combine. Continue to cook over medium heat, stirring occasionally.
+
+Meanwhile, juice the orange into a liquid measuring cup and top off with water to make 1 1/2 cups of liquid. Add liquid to a small saucepan along with 1 tablespoon olive oil, orange zest, lemon zest, and salt. Bring to a boil and stir in couscous. Cover, remove from heat, and let stand for at least 5 minutes.
+
+To serve, fluff couscous grains with a fork and spread on a dish. Spoon chickpeas and fennel over couscous and garnish with fennel fronds.
+    </p>
     </div>
   </div>
   <div class="panel panel-default">
